--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.112",
     "@types/react": "^18.3.11",
+    "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "fe_langgomsport": "file:",
+    "rc-slider": "^11.1.7",
+    "rc-tooltip": "^6.2.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
