--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "fe_langgomsport": "file:",
     "rc-slider": "^11.1.7",
     "rc-tooltip": "^6.2.1",
