--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fe_langgomsport": "file:",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-loading-skeleton": "^3.5.0",
     "react-scripts": "5.0.1",
