--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react": "^18.3.11",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.3.0",
+    "@uiw/react-markdown-preview": "^5.1.3",
+    "@uiw/react-md-editor": "^4.0.4",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "fe_langgomsport": "file:",
