--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@datobs/react-image-magnifiers": "^1.4.8",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -14,6 +15,7 @@
     "@types/react": "^18.3.11",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.3.0",
+    "@vanyapr/react-image-magnifiers": "^1.4.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "fe_langgomsport": "file:",
@@ -24,6 +26,7 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-image-magnify": "^2.7.4",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
@@ -53,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-image-magnify": "^2.7.4"
   }
 }
